<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/name"
            android:layout_width="112dp"
            android:layout_height="46dp"
            android:id="@+id/txtName" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="27dp"
            app:layout_constraintEnd_toStartOf="@+id/editName" android:layout_marginEnd="60dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="25sp" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editName"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:hint="@string/nameHint"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtName"/>
    <TextView
            android:text="@string/age"
            android:layout_width="111dp"
            android:layout_height="42dp"
            android:id="@+id/txtAge" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="27dp"
            app:layout_constraintEnd_toStartOf="@+id/editAge" android:layout_marginEnd="113dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="25sp" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txtName"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editAge" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/ageHint"
            android:layout_marginEnd="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/txtAge"/>
    <Button
            android:text="@string/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShow" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.639"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="ShowNotification"/>
    <TextView
            android:text="@string/app"
            android:layout_width="208dp"
            android:layout_height="42dp"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="176dp" android:layout_marginTop="30dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="27sp"/>
</android.support.constraint.ConstraintLayout>